# OOPL

./: .gitignore  2025OOPL_Final.md  CMakeLists.txt  README.md
include/: AnimatedCharacter.hpp  App.hpp  AppUtil.hpp  BackgroundImage.hpp  BlockSpawner.hpp  Character.hpp  ColorBlock.hpp  DamageHandler.hpp  Enemy.hpp  Phase.hpp  PhaseResourceManger.hpp  Platform.hpp  Spike.hpp  Spring.hpp  TaskText.hpp
src/: AnimatedCharacter.cpp  AppStart.cpp  AppUpdate.cpp  AppUtil.cpp  Character.cpp  Enemy.cpp  PhaseManager.cpp  Spike.cpp  Spring.cpp
